--- a/Help/Reader/v.01/src/VdomHelp.mxml
+++ b/Help/Reader/v.01/src/VdomHelp.mxml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:WindowedApplication
-	
-	showStatusBar="false"
-	showGripper="false"
-	showTitleBar="false"
-	
-	xmlns:vdomTitleBar="vdom.core.vdomTitleBar.*"
-	xmlns:mx="http://www.adobe.com/2006/mxml" 
-	minWidth="650" minHeight="300"
-	layout="absolute" creationComplete="{creatComleatHandler()}" 
-	backgroundColor="0x373739"   width="700" height="600" titleBarColors="[ 0x666666, 0x222222 ]" title="VDOM Help Aplication" 
-	titleTextStyleName="tbStyle" titleIcon="@Embed('../assets/bookmarks.png')" xmlns:local="*" viewSourceURL="srcview/index.html">
+<mx:WindowedApplication xmlns:vdomTitleBar="vdom.core.vdomTitleBar.*"
+						xmlns:mx="http://www.adobe.com/2006/mxml"
+						xmlns:local="*"
+						width="700" height="600" minWidth="650" minHeight="300"
+						backgroundColor="0x373739" creationComplete="{creatComleatHandler()}"
+						layout="absolute" showGripper="false" showStatusBar="false"
+						showTitleBar="false" title="VDOM Help Aplication"
+						titleBarColors="[ 0x666666, 0x222222 ]"
+						titleIcon="@Embed('../assets/bookmarks.png')" titleTextStyleName="tbStyle">
 	<mx:Style>
 		.tbStyle {
 			color : #FFFFFF;
@@ -18,18 +15,18 @@
 	</mx:Style>
 	<mx:Script>
 	<![CDATA[
-		import mx.controls.Label;
-		import mx.messaging.AbstractConsumer;
-		import mx.events.CloseEvent;
-		import mx.managers.PopUpManager;
-		import mx.controls.List;
-		import mx.events.ListEvent;
 		import mx.collections.XMLListCollection;
-		import mx.printing.FlexPrintJobScaleType;
-		import mx.printing.FlexPrintJob;
-		import mx.utils.StringUtil;
+		import mx.controls.Label;
+		import mx.controls.List;
+		import mx.events.CloseEvent;
+		import mx.events.ListEvent;
 		import mx.events.TreeEvent;
+		import mx.managers.PopUpManager;
+		import mx.messaging.AbstractConsumer;
+		import mx.printing.FlexPrintJob;
+		import mx.printing.FlexPrintJobScaleType;
 		import mx.utils.Base64Decoder;
+		import mx.utils.StringUtil;
 		
 		
 		/**
@@ -155,7 +152,7 @@
 			
 			var fileName:String = pageName	;
 			var newFile:File = File.applicationStorageDirectory.resolvePath(fileName);
-			var fullPath : String = newFile.url;
+			var fullPath : String = unescape(newFile.url);
 			var f : File = File.applicationStorageDirectory; 
 			html.location = fullPath; 
 			
