decode html.location from URL-encoded format
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6845 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Reader/v.01/src/VdomHelp.mxml
+++ b/Help/Reader/v.01/src/VdomHelp.mxml
@@ -177,7 +177,7 @@
 		
 		private function pageChangedHandler(event:Event):void
 		{
-			var fullPath:String = html.location;
+			var fullPath:String = unescape(html.location);
 			var fileName : String = fullPath.substr( 13 ); 
 			var phraseRE:RegExp = /\\/gim;
 			fileName = fileName.replace(phraseRE,"/"); 
@@ -308,7 +308,7 @@
 		
 		private function markPage():void
 		{
-			var fullPath:String = html.location;
+			var fullPath:String = unescape(html.location);
 			var fileName : String = fullPath.substr( 13 ); 
 			var phraseRE:RegExp = /\\/gim;
 			fileName = fileName.replace(phraseRE,"/"); 
