--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/ResourceSelectorWindow.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/ResourceSelectorWindow.mxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml"
 				xmlns:s="library://ns.adobe.com/flex/spark"
-				xmlns:resourceBrowser="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrouserWindow*"
 				
 				height="400" width="550"
 				backgroundColor="#CCCCCC" paddingBottom="5" paddingLeft="5" paddingRight="5" paddingTop="5"
@@ -20,12 +19,12 @@
 			import net.vdombox.ide.modules.wysiwyg.events.ResourceSelectorWindowEvent;
 
 			[ Bindable ]
-			public var totalResources : int = 0;
-			
-			[ Bindable ]
-			public var filteredResources : int = 0;
-			
-			public var deleteResourceID	: String = null;
+			public var totalResources		: int	= 0;
+
+			[Bindable]
+			public var filteredResources	: int   = 0;
+
+			public var deleteResourceID		: String = null;
 			
 			[Bindable]
 			private var _resources : ArrayList;
@@ -44,16 +43,16 @@
 			}
 
 			public function set resources( value : ArrayList ) : void
-			{
+			{				
 				_resources = value;	//new ArrayList( value );
 				setSelectedItem();
 			}
-			
+						
 			public function get resources() : ArrayList
 			{
 				return _resources;
 			}
-
+			
 			private function setSelectedItem() : void
 			{
 				if ( !_resources || _resources.length == 0 )
@@ -83,17 +82,19 @@
 					
 					resources.source = arrayWithoutResource( deleteResourceID );
 					
-					totalResources = resources.length;
+					totalResources = resources.length-1;
 					
 					deleteResourceID = null;
 					
-					if ( resources.length > 0 )
+					if ( resources.length > 1 && selInd > 1)
 					{
 						resourcesList.selectedIndex = ( selInd > 0 ) ? selInd -1 : 0;
 						selectResource();
 					}
 					else
+					{						
 						clearPreloaderField();
+					}
 				}
 			}
 			
@@ -114,6 +115,7 @@
 					if ( resVO.id != idRes )
 						newArray.push( resVO );
 				}
+				
 				return newArray;
 			}
 			
@@ -149,7 +151,16 @@
 			}
 
 			protected function selectResource( event:Event = null ):void
-			{
+			{				
+				if ( event == null )
+				{
+					dispatchEvent( new ResourceSelectorWindowEvent( ResourceSelectorWindowEvent.GET_RESOURCE ) );
+					return;
+				}
+				
+				if ( event.target.selectedIndex == 0 )
+					clearPreloaderField();
+				else
 					dispatchEvent( new ResourceSelectorWindowEvent( ResourceSelectorWindowEvent.GET_RESOURCE ) );
 			}
 
