--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItem.mxml
@@ -22,18 +22,15 @@
 	
 	<mx:Script>
 		<![CDATA[
-			import mx.controls.Alert;
-			import mx.events.CloseEvent;
-			
 			import net.vdombox.ide.common.vo.ResourceVO;
 			
-			private var _id:String;
-			private var _objType:String = '';
+			private var _id : String;
+			private var _objType : String = '';
 			
 			[Bindable]
 			private var resourceVO : ResourceVO;
 
-			override public function set data ( value:Object ) : void 
+			override public function set data ( value : Object ) : void 
 			{
 				super.data = value;
 				resourceVO = value as ResourceVO;
@@ -50,41 +47,11 @@
 				catch ( error : Error ) 
 				{
 					trace ("ThumbnailItem: exception at data setter!"); 
-					return;
 				}
 
-				smoothImage.source = resourceVO.icon;
+				if ( resourceVO )
+					smoothImage.source = resourceVO.icon;
 			}
-
-//			private var imageSourceLoader:Loader;
-			
-//			public function set resource ( source : Object ) : void 
-//			{
-//				imageSourceLoader = new Loader();
-//				imageSourceLoader.contentLoaderInfo.addEventListener(IOErrorEvent.IO_ERROR, ioErrorHandler);
-//				imageSourceLoader.contentLoaderInfo.addEventListener(Event.COMPLETE, imageLoaded);
-//				
-//				if( ByteArray(source.data).length )
-//					imageSourceLoader.loadBytes(ByteArray(source.data));
-//				else
-//					var d : * = "";
-//			}
-
-//			private function ioErrorHandler(ioEvent:IOErrorEvent):void 
-//			{
-//				imageSourceLoader.contentLoaderInfo.removeEventListener(IOErrorEvent.IO_ERROR, ioErrorHandler);
-//				imageSourceLoader.contentLoaderInfo.removeEventListener(Event.COMPLETE, imageLoaded);
-////				smoothImage.source = typesIcons.broken_Icon;
-//			}
-//			
-//			private function imageLoaded(e:Event):void 
-//			{
-//				imageSourceLoader.contentLoaderInfo.removeEventListener(IOErrorEvent.IO_ERROR, ioErrorHandler);
-//				imageSourceLoader.contentLoaderInfo.removeEventListener(Event.COMPLETE, imageLoaded);
-//				smoothImage.source = imageSourceLoader.content;
-//				res.text = imageSourceLoader.width.toString() + "x" + imageSourceLoader.height.toString();			
-//				deleteButton.enabled = true;
-//			}
 			
 			public function set objName( text : String ):void 
 			{ 
@@ -119,8 +86,7 @@
 			
 			private function deleteButton_clickHandler( event : MouseEvent ) : void
 			{
-				//Alert.show( "Delete resource: " +  resourceVO.name + "?", "Alert!", Alert.YES | Alert.NO,
-					//this, acceptDeleteHandler )
+				//Alert.show( "Delete resource: " +  resourceVO.name + "?", "Alert!", Alert.YES | Alert.NO, this, acceptDeleteHandler )
 				acceptDeleteHandler();
 //				owner.dispatchEvent( new Event( "DeleteResource", true, true ));
 			}
@@ -131,9 +97,6 @@
 //				{
 					var lie : ListItemEvent = new ListItemEvent( ListItemEvent.DELETE_RESOURCE );
 					lie.resource = resourceVO;
-//					lie.resourceID = objID;
-//					lie.resourceName = objName;
-//					lie.resourceType = objType;
 					owner.dispatchEvent( lie );
 //				}
 			}
