git-svn-id: http://svn.vdombox.ru/flextools/trunk@6856 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Reader/v.01/src/Settings.mxml
+++ b/Help/Reader/v.01/src/Settings.mxml
@@ -210,6 +210,8 @@
 			{
 				productsXMLController.removeEventListener(ProductXMLLoader.USER_CANCELED,	 onProductXMLLoadingCanceled);
 				labelComments.text = "XML file loading canceled.";
+				
+				blockChooseBtn(false);
 			}
 			
 			private function onAddProductOpened():void
