fixed same error 1) show content on copy 2) toplevel containers in list of objects
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6859 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
@@ -26,8 +26,8 @@
 					typeData.sort.fields = [ new SortField( "displayName" ) ];
 					typeData.refresh();
 				}
-
-				typeData.addItem( type );
+				if (type.container != 3)
+					typeData.addItem( type );
 			}
 		]]>
 	</fx:Script>
