git-svn-id: http://svn.vdombox.ru/flextools/trunk@6862 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/ExternalEditorWindow.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/ExternalEditorWindow.mxml
@@ -113,9 +113,9 @@ xmlns:s="library://ns.adobe.com/flex/spark"
 					trace ("loader_completeHandler!!!");
 					loader.contentLoaderInfo.removeEventListener( Event.COMPLETE, loader_completeHandler );
 
-					//event.currentTarget.content.addEventListener( FlexEvent.APPLICATION_COMPLETE, applicationCompleteHandler );
+					event.currentTarget.content.addEventListener( FlexEvent.APPLICATION_COMPLETE, applicationCompleteHandler );
 
-					//placer.addChild( loader.content );
+					placer.addChild( loader.content );
 				}
 
 				private function applicationCompleteHandler( event : Event ) : void
